--- a/LeetCodePractice.ipynb
+++ b/LeetCodePractice.ipynb
@@ -3064,54 +3064,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb738242",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def read_input():\n",
-    "    return (input().rstrip(), input().rstrip())\n",
-    "\n",
-    "def print_occurrences(output):\n",
-    "    print(' '.join(map(str, output)))\n",
-    "\n",
-    "def polyhash(string, prime, multiplier):\n",
-    "    hash_index = 0\n",
-    "    for c in reversed(string):\n",
-    "        hash_index = (hash_index * multiplier + ord(c)) % prime\n",
-    "    return hash_index\n",
-    "\n",
-    "def doHashes(text, pattern_length, prime, multiplier):\n",
-    "    hashes = [None] * (len(text) - pattern_length + 1)\n",
-    "    string = text[len(text) - pattern_length:]\n",
-    "    hashes[len(text) - pattern_length] = polyhash(string, prime, multiplier)\n",
-    "    index = 1\n",
-    "    for i in range(pattern_length):\n",
-    "        index = (index * multiplier) % prime\n",
-    "    for i in range(len(text) - pattern_length - 1, -1, -1):\n",
-    "        hashes[i] = (multiplier * hashes[i + 1] + ord(text[i]) - index * ord(text[i + pattern_length])) % prime\n",
-    "\n",
-    "    return hashes\n",
-    "\n",
-    "def get_occurrences(pattern, text):\n",
-    "    result = []\n",
-    "    prime = 1480978657\n",
-    "    multiplier = 193\n",
-    "    p_hash = polyhash(pattern, prime, multiplier)\n",
-    "    main_hash = doHashes(text, len(pattern), prime, multiplier)\n",
-    "\n",
-    "    for i in range(len(text) - len(pattern) + 1):\n",
-    "        if (p_hash == main_hash[i]) and (text[i:i + len(pattern)] == pattern):\n",
-    "            result.append(i)\n",
-    "\n",
-    "    return result\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "    print_occurrences(get_occurrences(*read_input()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "f152ee19",
    "metadata": {},
    "outputs": [],
@@ -3474,41 +3426,457 @@
    "id": "e4cbbd92",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "numRows = 5\n",
+    "memo = {}\n",
+    "memo = {1: [1], 2:[1, 1]}\n",
+    "for i in range(3, numRows+1):\n",
+    "    arr = [1] + ([0]* (i-2)) + [1]\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    memo[i] = arr\n",
+    "\n",
+    "    \n",
+    "memo"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "de8f0099",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate(numRows):\n",
+    "    if numRows == 0:\n",
+    "        return []\n",
+    "    if numRows == 1:\n",
+    "        return [[1]]\n",
+    "    \n",
+    "    prevRows = generate(numRows - 1)\n",
+    "    newRow = [1] * numRows\n",
+    "    \n",
+    "    for i in range(1, numRows - 1):\n",
+    "        newRow[i] = prevRows[-1][i-1] + prevRows[-1][i]\n",
+    "        \n",
+    "    prevRows.append(newRow)\n",
+    "    \n",
+    "    return prevRows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b33734d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getRow(rowIndex):\n",
+    "    rowIndex += 1\n",
+    "    def generate(numRows):\n",
+    "        if numRows == 0:\n",
+    "            return []\n",
+    "        if numRows == 1:\n",
+    "            return [[1]]\n",
+    "\n",
+    "        prevRows = generate(numRows - 1)\n",
+    "        newRow = [1] * numRows\n",
+    "\n",
+    "        for i in range(1, numRows - 1):\n",
+    "            newRow[i] = prevRows[-1][i-1] + prevRows[-1][i]\n",
+    "\n",
+    "        prevRows.append(newRow)\n",
+    "\n",
+    "        return prevRows\n",
+    "\n",
+    "    myarray = generate(rowIndex)\n",
+    "\n",
+    "    return myarray[rowIndex-1]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0c19cab2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getRow2(rowIndex):\n",
+    "    ans = [1] * (rowIndex + 1)\n",
+    "    up = rowIndex\n",
+    "    down = 1\n",
+    "    for i in range(1, ronIndex):\n",
+    "        ans[i] = ans[i-1]*up//down\n",
+    "        up -= 1\n",
+    "        down += 1\n",
+    "    return ans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "761a4aca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3.0, 3.0, 1]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "getRow(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "48f97d74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nums = [2,2,1]\n",
+    "nums = [1,2,1,2,3, 4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "2ba5d12e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nums = [1,2,1,2, 3]\n",
+    "for i in range(1, len(nums)):\n",
+    "    nums[0] ^= nums[i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "b063c895",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [4, 2, 1, 2, 1]\n",
+    "\n",
+    "mydict = {}\n",
+    "for num in nums:\n",
+    "    mydict[num] = mydict.get(num, 0) + 1\n",
+    "for key, value in mydict.items():\n",
+    "    if value == 1:\n",
+    "        print(key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "87b453dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getrow(rowIndex):\n",
+    "    ans = [1] * (rowIndex + 1)\n",
+    "    up = rowIndex\n",
+    "    down = 1\n",
+    "    \n",
+    "    for i in range(1, rowIndex):\n",
+    "        ans[i] = ans[i-1]*up/down\n",
+    "        up -= 1\n",
+    "        down += 1\n",
+    "    \n",
+    "    return ans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "2d550425",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3.0, 3.0, 1]"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "getrow(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "021c072f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [3,2,3]\n",
+    "nums = [2,2,1,1,1,2,2]\n",
+    "sorted(nums)[len(nums)//2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "76b2096b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nums = [0,1,2,4,5,7, 8, 9, 10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "id": "126f5700",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "9\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['0->0', '2->4', '6->6']"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [0,1,2,4,5,7]\n",
+    "nums = [0,2,3,4,6,8,9]\n",
+    "mygroup = []\n",
+    "start = nums[0]\n",
+    "\n",
+    "for i in range(len(nums)-1):\n",
+    "    current = nums[i]\n",
+    "    nextNum = nums[i+1]\n",
+    "    \n",
+    "    print(nextNum)\n",
+    "    \n",
+    "    if current + 1 != nextNum:\n",
+    "        mygroup.append(str(start) + '->' + str(current))\n",
+    "        start = nextNum\n",
+    "mygroup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "id": "fbfe213b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 2], [4, 5], [7, 7]]"
+      ]
+     },
+     "execution_count": 174,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [0,1,2,4,5,7]\n",
+    "myset = []\n",
+    "for n in nums:\n",
+    "    if myset and myset[-1][1] == n -1 :\n",
+    "        myset[-1][1] = n\n",
+    "    else:\n",
+    "        myset.append([n, n])\n",
+    "myset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "id": "c2476555",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['0->2', '4->5', '7']"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[f'{x}->{y}' if x!=y else f'{x}' for x,y in myset]\n",
+    "['{}->{}'.format(x, y) if x != y else '{}'.format(x) for x, y in myset]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 270,
+   "id": "fdaf13fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 1, 1, 0, 0]"
+      ]
+     },
+     "execution_count": 270,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [0,1,0,3,12]\n",
+    "\n",
+    "left = 0\n",
+    "right = len(nums)\n",
+    "\n",
+    "for i in range(right):\n",
+    "    if nums[i] != 0:\n",
+    "        nums[left], nums[i] = nums[i], nums[left]\n",
+    "        left += 1\n",
+    "        \n",
+    "nums"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 334,
+   "id": "5717d511",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, -1]\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [3,2,1]\n",
+    "nums = [1,2]\n",
+    "nums = [2,2,3,1]\n",
+    "nums = [-1,2,3]\n",
+    "a = list(set(nums))\n",
+    "print(a)\n",
+    "if len(a) > 2:\n",
+    "    print(a[-3])\n",
+    "else:\n",
+    "    print(a[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 368,
+   "id": "1cca22d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{5, 6}"
+      ]
+     },
+     "execution_count": 368,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [4,3,2,7,8,2,3,1]\n",
+    "\n",
+    "set(range(1, len(nums) + 1)) - set(nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 369,
+   "id": "a1c993ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = [1,2,3]\n",
+    "s = [1,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 370,
+   "id": "899c5207",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kid = 0\n",
+    "cookie = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93a6b59d",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "7686d2ad",
+   "execution_count": null,
+   "id": "180765a4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "summed"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb43d708",
+   "id": "607b3d40",
    "metadata": {},
    "outputs": [],
    "source": []
