--- a/LeetCodePractice.ipynb
+++ b/LeetCodePractice.ipynb
@@ -3837,30 +3837,202 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 123,
    "id": "a1c993ec",
    "metadata": {},
    "outputs": [],
    "source": [
-    "g = [1,2,3]\n",
-    "s = [1,1]"
+    "# g = [1,2,3]\n",
+    "# s = [1,1]\n",
+    "# g = [1,2]\n",
+    "# s = [1,2,3]\n",
+    "# g =[1,2,3]\n",
+    "# s = [3]\n",
+    "# g = [10,9,8,7,10,9,8,7]\n",
+    "# s = [10,9,8,7]\n",
+    "\n",
+    "g = [262,437,433,102,438,346,131,160,281,34,219,373,466,275,51,118,209,32,108,57,385,514,439,73,271,442,366,515,284,425,491,466,322,34,484,231,450,355,106,279,496,312,96,461,446,422,143,98,444,461,142,234,416,45,271,344,446,364,216,16,431,370,120,463,377,106,113,406,406,481,304,41,2,174,81,220,158,104,119,95,479,323,145,205,218,482,345,324,253,368,214,379,343,375,134,145,268,56,206]\n",
+    "s = [149,79,388,251,417,82,233,377,95,309,418,400,501,349,348,400,461,495,104,330,155,483,334,436,512,232,511,40,343,334,307,56,164,276,399,337,59,440,3,458,417,291,354,419,516,4,370,106,469,254,274,163,345,513,130,292,330,198,142,95,18,295,126,131,339,171,347,199,244,428,383,43,315,353,91,289,466,178,425,112,420,85,159,360,241,300,295,285,310,76,69,297,155,416,333,416,226,262,63,445,77,151,368,406,171,13,198,30,446,142,329,245,505,238,352,113,485,296,337,507,91,437,366,511,414,46,78,399,283,106,202,494,380,479,522,479,438,21,130,293,422,440,71,321,446,358,39,447,427,6,33,429,324,76,396,444,519,159,45,403,243,251,373,251,23,140,7,356,194,499,276,251,311,10,147,30,276,430,151,519,36,354,162,451,524,312,447,77,170,428,23,283,249,466,39,58,424,68,481,2,173,179,382,334,430,84,151,293,95,522,358,505,63,524,143,119,325,401,6,361,284,418,169,256,221,330,23,72,185,376,515,84,319,27,66,497]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
-   "id": "899c5207",
+   "execution_count": 124,
+   "id": "607b3d40",
    "metadata": {},
    "outputs": [],
    "source": [
-    "kid = 0\n",
-    "cookie = 0"
+    "def findContentChildren(g, s):\n",
+    "    if len(s) == 0:\n",
+    "        return 0\n",
+    "    \n",
+    "    g.sort()\n",
+    "    s.sort()\n",
+    "    \n",
+    "    mycount = 0\n",
+    "    cookieIndex = len(s) - 1\n",
+    "    childIndex = len(g) - 1\n",
+    "    \n",
+    "    while cookieIndex >= 0 and childIndex >= 0:\n",
+    "        if s[cookieIndex] >= g[childIndex]:\n",
+    "            mycount += 1\n",
+    "            cookieIndex -= 1\n",
+    "            childIndex -= 1\n",
+    "        else:\n",
+    "            childIndex -=1\n",
+    "            \n",
+    "    return mycount\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "bc66a4c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "99"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "findContentChildren(g, s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "8eb9bd94",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [1,1,0,1,1,1]\n",
+    "# nums = [1,0,1,1,0,1]\n",
+    "nums = [1,0,1,1,0,1]\n",
+    "\n",
+    "\n",
+    "maxCount = 0\n",
+    "currentCount = 0\n",
+    "\n",
+    "for num in nums:\n",
+    "    if num == 0:\n",
+    "        currentCount = 0\n",
+    "    if num == 1:\n",
+    "        currentCount +=1\n",
+    "    maxCount = max(currentCount, maxCount)\n",
+    "\n",
+    "maxCount"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "id": "e58d99e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "timeSeries = [1,4]\n",
+    "duration = 2\n",
+    "# timeSeries = [1,2]\n",
+    "# duration = 2\n",
+    "timeSeries = [1,3,5,7,9,11,13,15]\n",
+    "duration = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "id": "4235d1d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 203,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poisoned = 0\n",
+    "\n",
+    "for i in range(len(timeSeries)-1):\n",
+    "    difference = min(duration, timeSeries[i+1] - timeSeries[i])\n",
+    "    poisoned += difference\n",
+    "\n",
+    "poisoned += duration\n",
+    "\n",
+    "poisoned\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
+   "id": "27815f02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nums1 = [4,1,2]\n",
+    "nums2 = [1,3,4,2]\n",
+    "# nums1 = [2,4]\n",
+    "# nums2 = [1,2,3,4]\n",
+    "nums1 = [1,3,5,2,4]\n",
+    "nums2 = [6,5,4,3,2,1,7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "id": "998a8c71",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[7, 2, 4, 1, 3]"
+      ]
+     },
+     "execution_count": 259,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums2.append(0)\n",
+    "my_output = []\n",
+    "for num in nums1:\n",
+    "    if num < (sorted(nums2[nums2.index(num):], reverse=True)[0]):\n",
+    "        my_output.append(nums2[nums2.index(num)+1])\n",
+    "    else:\n",
+    "        my_output.append(-1)\n",
+    "my_output"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93a6b59d",
+   "id": "ee5796e5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3868,15 +4040,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "180765a4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "607b3d40",
+   "id": "4f0a8589",
    "metadata": {},
    "outputs": [],
    "source": []
