--- a/LeetCodePractice.ipynb
+++ b/LeetCodePractice.ipynb
@@ -4031,8 +4031,267 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 294,
    "id": "ee5796e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "words = [\"Hello\",\"Alaska\",\"Dad\",\"Peace\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 295,
+   "id": "4f0a8589",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Alaska', 'Dad']"
+      ]
+     },
+     "execution_count": 295,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "keyword_dict = {1: 'qwertyuiop',\n",
+    "               2: 'asdfghjkl',\n",
+    "               3: 'zxcvbnm'}\n",
+    "mylist = []\n",
+    "for word in words:\n",
+    "    if ([keyword_dict.get(1).find(x) for x in word.lower()]).count(-1) == 0:\n",
+    "        mylist.append(word)\n",
+    "    if ([keyword_dict.get(2).find(x) for x in word.lower()]).count(-1) == 0:\n",
+    "        mylist.append(word)\n",
+    "    if ([keyword_dict.get(3).find(x) for x in word.lower()]).count(-1) == 0:\n",
+    "        mylist.append(word)\n",
+    "        \n",
+    "mylist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 360,
+   "id": "796f135a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 9, 8, 4, 3]"
+      ]
+     },
+     "execution_count": 360,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "score = [5,4,3,2,1]\n",
+    "score = [10,3,8,9,4]\n",
+    "sorted(score, reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 372,
+   "id": "800e1adf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Gold Medal', 5, 'Bronze Medal', 'Silver Medal', 4]"
+      ]
+     },
+     "execution_count": 372,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_dict = {}\n",
+    "my_dict2 = {}\n",
+    "mynumber = sorted(score, reverse=True)\n",
+    "\n",
+    "for i in range(len(sorted(score, reverse=True))):\n",
+    "    if i == 0:\n",
+    "        my_dict[i+1] = 'Gold Medal'\n",
+    "        my_dict2[mynumber[i]] = 1\n",
+    "    elif i == 1:\n",
+    "        my_dict[i+1] = 'Silver Medal'\n",
+    "        my_dict2[mynumber[i]] = 2\n",
+    "    elif i == 2:\n",
+    "        my_dict[i+1] = 'Bronze Medal'\n",
+    "        my_dict2[mynumber[i]] = 3\n",
+    "    else:\n",
+    "        my_dict[i+1] = i + 1\n",
+    "        my_dict2[mynumber[i]] = int(i + 1)\n",
+    "        \n",
+    "        \n",
+    "my_output = []\n",
+    "for num in score:\n",
+    "    my_output.append(my_dict.get(my_dict2.get(num)))\n",
+    "\n",
+    "my_output  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 507,
+   "id": "87fae340",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nums = [1,4,3,2]\n",
+    "# nums = [6,2,6,5,1,2]\n",
+    "nums.sort()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 508,
+   "id": "32b32a98",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, [1, 2, 3, 4])"
+      ]
+     },
+     "execution_count": 508,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k = len(nums)//2\n",
+    "k, nums"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 509,
+   "id": "60266004",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 509,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "left = 0\n",
+    "summed = 0\n",
+    "for i in range(k):\n",
+    "    summed += min(nums[left:left+2])\n",
+    "    left += 2\n",
+    "summed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 514,
+   "id": "dc798643",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 514,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "candyType = [1,1,2,2,3,3]\n",
+    "candyType = [1,1,2,3]\n",
+    "candyType = [6,6,6,6]\n",
+    "can_eat = len(candyType) / 2\n",
+    "min(len(candyType) / 2, len(set(candyType)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 572,
+   "id": "03cc024c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 572,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [1,3,2,2,5,2,3,7]\n",
+    "nums = [1,2,3,4]\n",
+    "# nums = [1,1,1,1]\n",
+    "# nums = [1,3,5,7,9,11,13,15,17]\n",
+    "nums.sort()\n",
+    "nums"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 599,
+   "id": "9726bb57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def findLHS(nums):\n",
+    "    nums.sort()\n",
+    "    if len(set(nums)) == 1:\n",
+    "        return 0\n",
+    "    my_dict = {}\n",
+    "    for n in nums:\n",
+    "        if n not in my_dict:\n",
+    "            my_dict[n] = 0\n",
+    "        my_dict[n] += 1\n",
+    "    return sum(sorted(list(my_dict.values()), reverse=True)[:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 639,
+   "id": "032bee58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list1 = [\"Shogun\",\"Tapioca Express\",\"Burger King\",\"KFC\"]\n",
+    "list2 = [\"Piatti\",\"The Grill at Torrey Pines\",\"Hungry Hunter Steakhouse\",\"Shogun\"]\n",
+    "# list1 = [\"Shogun\",\"Tapioca Express\",\"Burger King\",\"KFC\"]\n",
+    "# list2 = [\"KFC\",\"Shogun\",\"Burger King\"]\n",
+    "# list1 = [\"happy\",\"sad\",\"good\"]\n",
+    "# list2 = [\"sad\",\"happy\",\"good\"]\n",
+    "list1 = [\"Shogun\",\"Tapioca Express\",\"Burger King\",\"KFC\"]\n",
+    "list2 = [\"KFC\",\"Burger King\",\"Tapioca Express\",\"Shogun\"]\n",
+    "list1 = [\"Shogun\",\"Tapioca Express\",\"Burger King\",\"KFC\"]\n",
+    "list2 = [\"KNN\",\"KFC\",\"Burger King\",\"Tapioca Express\",\"Shogun\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01c5bb9e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4040,7 +4299,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f0a8589",
+   "id": "d5056952",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0fca9564",
    "metadata": {},
    "outputs": [],
    "source": []
